tests/idris2/perror005/expected
1/1: Building PError (PError.idr)
Error: Expected 'in'.

PError:7:1--7:4
 3 | 
 4 | bar : Int -> Int
 5 | bar x = let y = 42
 6 | 
 7 | baz : Int -> Int
     ^^^

